# med_pred

./: .gitignore  Dockerfile  README.md  plan.md  pyproject.toml  requirements.txt  test_gpu_poc.py  train.py
conf/: config.yaml
conf/data/: mimic_mock.yaml  mimic_real.yaml
conf/model/: lstm.yaml  transformer.yaml
deploy/: api.py  dashboard.py
eda/: check_labels.py  check_outcomes.py  inspect_data.py  mimic_tabellen_report.md  seq_lengths.py  table_contents.py
eval/: debug_data_split.py  eval_early_warnings.py
src/: config.py
src/data/: mimic_loader.py  preprocess_duckdb.py
src/models/: base_module.py  rnn_module.py  transformer_module.py
