[project]
name = "med-pred"
version = "0.1.0"
description = "Medical Prediction Project using PyTorch Lightning and MLflow"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "pytorch-lightning",
    "mlflow",
    "numpy",
    "hydra-core",
    "omegaconf",
    "duckdb>=1.4.4",
    "pandas>=2.3.3",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
