[project]
name = "med-pred"
version = "0.1.0"
description = "Medical Prediction Project using PyTorch Lightning and MLflow"
requires-python = ">=3.9"
dependencies = [
    "duckdb",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "pytorch-lightning",
    "hydra-core",
    "omegaconf",
    "mlflow",
    "torch",
    "torchvision",
    "torchaudio",
    "uvicorn>=0.39.0",
    "streamlit>=1.50.0",
    "fastapi>=0.128.0",
    "plotly>=6.5.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
